; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_bfin_jtag_comm.c_bfin_write_emudat_chars.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_bfin_jtag_comm.c_bfin_write_emudat_chars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8, i8, i8, i8)* @bfin_write_emudat_chars to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bfin_write_emudat_chars(i8 signext %0, i8 signext %1, i8 signext %2, i8 signext %3) #0 {
  %5 = alloca i8, align 1
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  store i8 %0, i8* %5, align 1
  store i8 %1, i8* %6, align 1
  store i8 %2, i8* %7, align 1
  store i8 %3, i8* %8, align 1
  %9 = load i8, i8* %5, align 1
  %10 = sext i8 %9 to i32
  %11 = shl i32 %10, 0
  %12 = load i8, i8* %6, align 1
  %13 = sext i8 %12 to i32
  %14 = shl i32 %13, 8
  %15 = or i32 %11, %14
  %16 = load i8, i8* %7, align 1
  %17 = sext i8 %16 to i32
  %18 = shl i32 %17, 16
  %19 = or i32 %15, %18
  %20 = load i8, i8* %8, align 1
  %21 = sext i8 %20 to i32
  %22 = shl i32 %21, 24
  %23 = or i32 %19, %22
  %24 = trunc i32 %23 to i8
  %25 = call i32 @bfin_write_emudat(i8 signext %24)
  ret i32 %25
}

declare dso_local i32 @bfin_write_emudat(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
